--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -119,7 +119,7 @@ excerpt_separator: <!-- more -->
                 {{ post.title }}
                 <div class='badge'>
                   <div class='hide-on-small-only'>
-                    <span class='grey-text shifty-date date-sub-display' id='y_{{post.date | date: "%Y_%B"}}'>{{currentdate}}</span>
+                    <span class='grey-text shifty-date date-sub-display' id='y_{{post.date | date: "%Y_%B_%a"}}'>{{currentdate}}</span>
                   </div>
                 </div>
               </div>
