--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -141,7 +141,8 @@ excerpt_separator: <!-- more -->
     </a>
 
     <div class="headshot col s12 m3 l5 offset-l1">
-      <img alt='rene m paccha picture willis tower background' class='needs-to-be-own-thing materialboxed center-align responsive-img' src='{{ "/assets/rene-m-paccha-chicago-250.png" | relative_url }}' srcset='{{ "/assets/rene-m-paccha-chicago-500.png" | relative_url }} 500w, {{ "/assets/rene-m-paccha-chicago.png" | relative_url }} 1000w' width='650'>
+      <img alt='rene m paccha picture willis tower background' class='needs-to-be-own-thing materialboxed center-align responsive-img' src='{{ "/assets/rene-m-paccha-chicago-250.png" | relative_url }}' srcset='{{ "/assets/rene-m-paccha-chicago-500.png" | relative_url }} 500w, {{ "/assets/rene-m-paccha-chicago.png" | relative_url }} 1000w' sizes="(min-width: 36em) 33.3vw,
+            100vw">
     </div>
   </div>
 </div>
