--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -66,7 +66,7 @@ excerpt_separator: <!-- more -->
                   </div>
 
                 </div>
-                <div class='blog-font'>{{ post.excerpt }}</div>
+                <div class='blog-font post-content'>{{ post.excerpt }}</div>
 
 
               </li>
