--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,33 +1,38 @@
 ---
 layout: default
 ---
-<article class='post'>
-  <header class='post-header'>
-    <h1 class='post-title strong-blog-font'>{{ page.title | escape }}</h1>
+<article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
-    <div class='post-meta strong-blog-font'><time datetime='{{ page.date | date_to_xmlschema }}'>
+  <header class="post-header">
+    <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
+    <div class="post-meta">
+      <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
+        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+        {{ page.date | date: date_format }}
+      </time>
 
-      {{ page.date | date: '%A, %B %e, %Y' }}
-    </time>
+      {%- if page.author -%}
+      <a href='{{ "/about/" | relative_url }}'>
+        <div class="chip right">
+          <img src='/assets/images/rene-avatar.jpg' alt="Contact Person Rene">
+          <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
+        </div>
+      </a>
+      {%- endif -%}
+    </div>
+  </header>
 
-    {% if page.last_modified_at %}
-      <br/>
-
-      <p class="left black-text">Updated: <time datetime='{{ page.last_modified_at | date: "%B %e, %Y"}}'>{{ page.last_modified_at | date: "%B %e, %Y"}}</time></p>
-      <br/>
-      <br/>
-      <br/>
-
-    {% endif %}
-
-
-
-    {% if page.author %}
-    <span></span>
-    {% endif %}
+  <div class="post-content e-content" itemprop="articleBody">
+    {{ content }}
   </div>
-</header>
-<div class='post-content blog-font'>
-  {{ content }}
-</div>
+
+  {%- if site.disqus.shortname -%}
+    {%- include disqus_comments.html -%}
+  {%- endif -%}
+
+  <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
+
+
+
+
 </article>
