--- a/assets/main.scss
+++ b/assets/main.scss
@@ -4,13 +4,13 @@
 @charset "utf-8";
 
 // Our variables
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+// $base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 // $base-font-family: 'Rokkitt', serif !default;
 
 // $base-font-family:'Raleway', sans-serif; // NOTE: LOOKS SQUISHED   7/10
 
 // $base-font-family:'Assistant', sans-serif; // // NOTE: IS ON-MESSAGE , LOOKS MARKET-Y 7.7/10
-// $base-font-family:'Cabin', sans-serif;  //NOTE:  looks malleable, flexible : 5/10 but with potential (lighter?)
+$base-font-family:'Cabin', sans-serif;  //NOTE:  looks malleable, flexible : 5/10 but with potential (lighter?)
 
 
 
@@ -41,17 +41,14 @@ $on-laptop:        800px;
 .site-title {
   letter-spacing: 3px;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-
-  // font-family: 'Assistant', sans-serif;
-  // font-family: 'Cabin', sans-serif;
   font-weight: 200;
 }
 
-.post-title {
-  // font-family: 'Assistant', sans-serif;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  // font-weight: 700;
-}
+// .post-title, .post-meta {
+//   font-family: 'Cabin', sans-serif;
+//   font-weight: 700;
+//   font-style: normal;
+// }
 
 h1, h2, h3, h4, h5, p, li, span {
   letter-spacing: .805px;
@@ -66,13 +63,6 @@ h1, h2, h3, h4, h5, p, li, span {
 
 @import "minima";
 @import 'materialize';
-
-
-#pinned-reading {
-  font-family: 'Cabin', sans-serif;
-  border: 1px solid #d5d5d5;
-}
-
 
 .page-heading {
   margin-left: -5px;
@@ -101,19 +91,6 @@ a:visited, a:hover {
   color: #002355;
 }
 
-
-.blog-font, .end-section {
-  font-family: 'Cabin', sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-
-.strong-blog-font, .page-heading {
-  font-family: 'Cabin', sans-serif;
-  font-weight: 700;
-  font-style: normal;
-}
 
 .page-footer {
   padding-top: 0px;
