--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ layout: default
       <br/>
       <br/>
       <a href='{{ "/about/" | relative_url }}'>
-        <div class="chip right">
+        <div class="chip">
           <img src='/assets/images/rene-avatar.jpg' alt="Contact Person Rene">
           <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
         </div>
