updating at fix

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -44,11 +44,9 @@ $on-laptop:        800px;
   font-weight: 200;
 }
 
-// .post-title, .post-meta {
-//   font-family: 'Cabin', sans-serif;
-//   font-weight: 700;
-//   font-style: normal;
-// }
+.at-aware {
+  font-family: 'Cabin', sans-serif;
+}
 
 h1, h2, h3, h4, h5, p, li, span {
   letter-spacing: .805px;
