updating at fix

--- a/_includes/pro-footer.html
+++ b/_includes/pro-footer.html
@@ -12,7 +12,7 @@
       </span>
       <a class='grey-text text-lighten-4 right' href='mailto:rene@marketingforlawyers.org'>
         <span>E-mail:</span>
-        <span>rene@marketingforlawyers.org</span>
+        <span class="at-aware">rene@marketingforlawyers.org</span>
       </a>
     </div>
   </div>
