--- a/assets/main.scss
+++ b/assets/main.scss
@@ -45,7 +45,7 @@ $on-laptop:        800px;
 }
 
 .at-aware {
-  font-family: 'Cabin', sans-serif;
+  "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 h1, h2, h3, h4, h5, p, li, span {
