--- a/_includes/pro-footer.html
+++ b/_includes/pro-footer.html
@@ -10,7 +10,7 @@
       <span class='show-on-small hide-on-med-and-up right'>
         © 2019 Case Linguist LLC
       </span>
-      <a class='grey-text text-lighten-4 right' href='mailto:rene@marketingforlawyers.org'>
+      <a class='at-aware grey-text text-lighten-4 right' href='mailto:rene@marketingforlawyers.org'>
         <span>E-mail:</span>
         <span class="at-aware">rene@marketingforlawyers.org</span>
       </a>
