--- a/assets/main.scss
+++ b/assets/main.scss
@@ -4,20 +4,10 @@
 @charset "utf-8";
 
 // Our variables
-// $base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-// $base-font-family: 'Rokkitt', serif !default;
-
-// $base-font-family:'Raleway', sans-serif; // NOTE: LOOKS SQUISHED   7/10
-
-// $base-font-family:'Assistant', sans-serif; // // NOTE: IS ON-MESSAGE , LOOKS MARKET-Y 7.7/10
-$base-font-family:'Cabin', sans-serif;  //NOTE:  looks malleable, flexible : 5/10 but with potential (lighter?)
-
-
-
-
+$base-font-family:'Cabin', sans-serif;
 
 $base-font-size:   16px;
-$base-font-weight: 200;
+$base-font-weight: 400;
 $small-font-size:  $base-font-size * 1.475;
 $base-line-height: 1.5;
 
@@ -34,18 +24,19 @@ $grey-color-dark:  darken($grey-color, 25%);
 
 // Width of the content area
 $content-width:    1175px;
-
 $on-palm:          600px;
 $on-laptop:        800px;
 
 .site-title {
-  letter-spacing: 3px;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 200;
+  letter-spacing: 3px;
+
 }
 
-.at-aware {
-  "Helvetica Neue", Helvetica, Arial, sans-serif;
+.at-aware, .heading-jumbo, .footer-heading {
+  font-family: 'Rokkitt', serif;
+  font-weight: 500;
 }
 
 h1, h2, h3, h4, h5, p, li, span {
@@ -59,6 +50,9 @@ h1, h2, h3, h4, h5, p, li, span {
   margin: auto auto;
 }
 
+#pinned-reading {
+  border: 1px solid #D5D5D5;
+}
 @import "minima";
 @import 'materialize';
 
@@ -123,7 +117,7 @@ a:visited, a:hover {
 }
 
 .intro-wrap {
-  font-family: 'Assistant', sans-serif;
+  // font-family: 'Assistant', sans-serif;
   margin-top: 80px;
   margin-bottom: 140px;
 }
