--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -141,8 +141,9 @@ excerpt_separator: <!-- more -->
     </a>
 
     <div class="headshot col s12 m3 l5 offset-l1">
-      <img alt='rene m paccha picture willis tower background' class='needs-to-be-own-thing materialboxed center-align responsive-img' src='{{ "/assets/rene-m-paccha-chicago-250.png" | relative_url }}' srcset='{{ "/assets/rene-m-paccha-chicago-500.png" | relative_url }} 500w, {{ "/assets/rene-m-paccha-chicago.png" | relative_url }} 1000w' sizes="(min-width: 36em) 33.3vw,
-            100vw">
+      <img alt='rene m paccha picture willis tower background' class='needs-to-be-own-thing materialboxed center-align responsive-img'
+      src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
+      data-src="/assets/images/rene-m-paccha-chi.jpg">
     </div>
   </div>
 </div>
@@ -162,3 +163,4 @@ excerpt_separator: <!-- more -->
 
 </script>
 {% include photo-pop.html %}
+{% include image-defer.html %}
