--- a/_includes/charts/pew-population-chart.html
+++ b/_includes/charts/pew-population-chart.html
@@ -16,7 +16,7 @@
         },
 
         subtitle: {
-          text: 'Source: <a href="https://www.pewhispanic.org/2018/09/14/facts-on-u-s-immigrants/#fb-key-charts-population">' +
+          text: 'Source: <a href="https://www.pewhispanic.org/2019/06/03/facts-on-u-s-immigrants/">' +
             'pewhispanic.org</a>'
           },
           xAxis: {
