--- a/_includes/pricecards/moz-abogado.html
+++ b/_includes/pricecards/moz-abogado.html
@@ -8,9 +8,9 @@
             </div>
             <div class="card-stacked">            </div>
             <div class="card-action center-align">
-             <a class="black-text" href="//analytics.moz.com/pro/keyword-explorer/keyword/overview?locale=en-US&q=abogado">
+             <div class="black-text">
                <img height="20" src="/assets/moz_logo.png" alt="moz logo">
-             </a>
+             </div>
             </div>
 
         </div>
