--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,13 +27,13 @@ layout: default
   <br/>
   <a href='{{ "/about/" | relative_url }}'>
     <div class="chip">
-      <img src='/assets/images/rene-avatar.jpg' alt="Contact Person Rene">
+      <img src='/assets/images/rene-avatar.svg' alt="Contact Person Rene">
       <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
     </div>
   </a>
   <br/>
   <br/>
-  <br/>  
+  <br/>
   {%- endif -%}
 
 </article>
