--- a/_sass/materialize.scss
+++ b/_sass/materialize.scss
@@ -21,23 +21,23 @@ $primary-color: color("blue", "darken-3") !default;
 @import "materialize/components/typography";
 @import "materialize/components/transitions";
 @import "materialize/components/cards";
-@import "materialize/components/toast";
-@import "materialize/components/tabs";
-@import "materialize/components/tooltip";
+// @import "materialize/components/toast";
+// @import "materialize/components/tabs";
+// @import "materialize/components/tooltip";
 @import "materialize/components/buttons";
 @import "materialize/components/dropdown";
 @import "materialize/components/waves";
-@import "materialize/components/modal";
-@import "materialize/components/collapsible";
+// @import "materialize/components/modal";
+// @import "materialize/components/collapsible"; TODO: ADD MAIL LIST SPECIFIC INFO
 @import "materialize/components/chips";
 @import "materialize/components/materialbox";
 @import "materialize/components/forms/forms";
-@import "materialize/components/table_of_contents";
-@import "materialize/components/sidenav";
-@import "materialize/components/preloader";
-@import "materialize/components/slider";
-@import "materialize/components/carousel";
+// @import "materialize/components/table_of_contents";
+// @import "materialize/components/sidenav";
+// @import "materialize/components/preloader";
+// @import "materialize/components/slider";
+// @import "materialize/components/carousel";
 @import "materialize/components/tapTarget";
-@import "materialize/components/pulse";
-@import "materialize/components/datepicker";
-@import "materialize/components/timepicker";
+// @import "materialize/components/pulse";
+// @import "materialize/components/datepicker";
+// @import "materialize/components/timepicker";
