--- a/_includes/charts/sitemap.html
+++ b/_includes/charts/sitemap.html
@@ -71,7 +71,7 @@
     id: 'Twitter.com',
     color: '#BFD6ED',
     column: 2,
-    title: "<a style='color:green' href='//twitter.com/@caselinguist'>@caselinguist</a>"
+    title: "<a style='color:green' href='//twitter.com/@caselinguist' rel='noopener'>@caselinguist</a>"
   },
   {
     id: 'Not all clients search in English',
