--- a/_includes/icon-github.html
+++ b/_includes/icon-github.html
@@ -1,1 +1,1 @@
-<a href="//github.com/{{ include.username }}"><span class="icon icon--github">{% include icon-github.svg %}</span><span class="username">{{ include.username }}</span></a>
+<a href="//github.com/{{ include.username }} rel='noopener' target='_blank'"><span class="icon icon--github">{% include icon-github.svg %}</span><span class="username">{{ include.username }}</span></a>
