--- a/_includes/icon-twitter.html
+++ b/_includes/icon-twitter.html
@@ -1,4 +1,4 @@
-<a href="//twitter.com/{{ include.username }}">
+<a href="//twitter.com/{{ include.username }}" rel="noopener">
   <i class="fab fa-twitter green-text"></i>
   <!-- <span class="icon icon--twitter">{% include icon-twitter.svg %}</span> -->
 
