--- a/_includes/icon-twitter.html
+++ b/_includes/icon-twitter.html
@@ -1,6 +1,3 @@
 <a href="//twitter.com/{{ include.username }}" rel="noopener">
-  <i class="fab fa-twitter green-text"></i>
-  <!-- <span class="icon icon--twitter">{% include icon-twitter.svg %}</span> -->
-
-  <span class="username green-text">＠{{ include.username }}</span>
+  <span class="username green-text icon-twitter">＠{{ include.username }}</span>
 </a>
