--- a/assets/main.scss
+++ b/assets/main.scss
@@ -55,6 +55,7 @@ h1, h2, h3, h4, h5, p, li, span {
 }
 @import "minima";
 @import 'materialize';
+@import 'css/fontello.css';
 
 .page-heading {
   margin-left: -5px;
