webp the landing page logo

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@ excerpt_separator: <!-- more -->
       <div class="row center">
         <div class="col s12 l3">
           <span class='center-align'>
-            <img alt='case linguist logo' src='assets/logo.png' width='350'>
+            <img alt='case linguist logo' src='assets/images/logo.webp' width='350'>
           </span>
         </div>
       </div>
