--- a/_includes/pro-footer.html
+++ b/_includes/pro-footer.html
@@ -1,19 +1,12 @@
 <div class='page-footer final-footer z-depth-1'>
   <div class='footer-copyright'>
     <div class='copyright-container container'>
-      <span class='hide-on-small-only show-on-medium-and-up'>
-        © 2019 Case Linguist LLC
-      </span>
-      <a class='grey-text text-lighten-4' href='{{ "/sitemap.html" | relative_url }}'>
-        <span>Visual Site Map</span>
-      </a>
-      <span class='show-on-small hide-on-med-and-up right'>
-        © 2019 Case Linguist LLC
-      </span>
-      <a class='at-aware grey-text text-lighten-4 right' href='mailto:rene@marketingforlawyers.org'>
-        <span>E-mail:</span>
-        <span class="at-aware">rene@marketingforlawyers.org</span>
-      </a>
+
+<div class="at-aware">
+        © 2019 Case Linguist LLC  
+</div>
+
+
     </div>
   </div>
 </div>
