--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,7 @@
             {% endif %}
           </li>
           {% if site.email %}
-          <li><a href="mailto:{{ site.email }}" class="at-aware">{{ site.email }}</a></li>
+          <li class="at-aware blue-text text-darken-4" ><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
           {% endif %}
         </ul>
       </div>
