--- a/_includes/icon-twitter.html
+++ b/_includes/icon-twitter.html
@@ -1,3 +1,3 @@
 <a href="//twitter.com/{{ include.username }}" rel="noopener">
-  <span class="username green-text icon-twitter">＠{{ include.username }}</span>
+  <span class="username green-text text-darken-3 icon-twitter">＠{{ include.username }}</span>
 </a>
