--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -92,9 +92,7 @@ excerpt_separator: <!-- more -->
     <div class="col s12 m9 l6">
       <ul class='collection with-header'>
         <li class='collection-header'>
-          <h2 class='page-heading'>
-            Blog
-          </h2>
+          <h2 class='page-heading'>Blog</h2>          
         </li>
         {% for post in site.posts limit:9 %}
         {% assign currentdate = post.date | date: "%b %e - %a" %}
