--- a/_includes/pro-footer.html
+++ b/_includes/pro-footer.html
@@ -1,9 +1,13 @@
 <div class='page-footer final-footer z-depth-1'>
   <div class='footer-copyright'>
     <div class='copyright-container container'>
+      <div class="white-text text-darken-4">
+          <a class="white-text text-darken-4" href="{{ '/privacy.html' | relative_url }}">Privacy</a>
+      </div>
       <div class="at-aware">
         © 2019 Case Linguist LLC
-      </div>      
+        <a class="white-text text-darken-4" href="{{ '/sitemap.html' | relative_url }}">Sitemap</a>
+      </div>
     </div>
   </div>
 </div>
