--- a/_includes/pro-footer.html
+++ b/_includes/pro-footer.html
@@ -2,11 +2,12 @@
   <div class='footer-copyright'>
     <div class='copyright-container container'>
       <div class="white-text text-darken-4">
-          <a class="white-text text-darken-4" href="{{ '/privacy.html' | relative_url }}">Privacy</a>
+          <a class="white-text text-darken-4 underline" href="{{ '/privacy.html' | relative_url }}">Privacy</a> | 
+          <a class="white-text text-darken-4 underline" href="{{ '/terms.html' | relative_url }}">Terms & Conditions</a>
       </div>
       <div class="at-aware">
         © 2019 Case Linguist LLC
-        <a class="white-text text-darken-4" href="{{ '/sitemap.html' | relative_url }}">Sitemap</a>
+        <a class="white-text text-darken-4 underline" href="{{ '/sitemap.html' | relative_url }}">Sitemap</a>
       </div>
     </div>
   </div>
