--- a/assets/main.scss
+++ b/assets/main.scss
@@ -57,6 +57,10 @@ h1, h2, h3, h4, h5, p, li, span {
 @import 'materialize';
 @import 'css/fontello.css';
 
+.underline {
+  text-decoration: underline;
+}
+
 .page-heading {
   margin-left: -5px;
 }
