--- a/_includes/head.html
+++ b/_includes/head.html
@@ -52,5 +52,8 @@
   </script>
   <!-- /Chatra {/literal} -->
 
+  <!-- Business Schema (Head) -->
+  {% include json-ld/business.html %}
+
 
 </head>
