--- a/_includes/head.html
+++ b/_includes/head.html
@@ -53,7 +53,7 @@
   <!-- /Chatra {/literal} -->
 
   <!-- Business Schema (Head) -->
-  <!-- {% include json-ld/business.html %} -->
+  {% include json-ld/business.html %}
 
 
 </head>
