--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,4 +38,4 @@ layout: default
 
 </article>
 
-{% include json-ld/webpage title=page.title excerpt=page.excerpt %}
+{% include json-ld/webpage.html title=page.title description=page.excerpt %}
