--- a/_includes/image-defer.html
+++ b/_includes/image-defer.html
@@ -1,9 +1,82 @@
+<style>
+  .shubox--form p {
+  text-align: left;
+  margin-bottom: 2rem;
+}
+
+.shubox--input,
+.shubox--textarea {
+  background: #efefef;
+  padding: 1rem;
+}
+
+.shubox--textarea {
+  margin-bottom: 0;
+  min-height: 10rem;
+  clear: both;
+  display: block;
+}
+
+.shubox--click-to-upload {
+  cursor: pointer;
+  text-align: left;
+  background: lightGray;
+  font-size: 0.6rem;
+  text-transform: lowercase;
+  padding: 0.5rem 1rem;
+  opacity: 0.8;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+.shubox--click-to-upload:hover {
+  opacity: 1;
+}
+
+</style>
+
+<div class="shubox--container">
+  <div class="content">
+     <form class="shubox--form">
+
+      <textarea
+        tabindex="1"
+        placeholder="Leave a comment or drag and drop some images."
+        class="shubox--textarea shubox--textarea--no-click-bar"
+        id="shubox--textarea--append">Dragging & dropping here will append after 👉</textarea>
+
+    </form>
+  </div>
+</div>
+
 <script>
-  function init() {
-    var imgDefer = document.getElementsByTagName('img');
-    for (var i=0; i<imgDefer.length; i++) {
-      if(imgDefer[i].getAttribute('data-src')) {
-        imgDefer[i].setAttribute('src',imgDefer[i].getAttribute('data-src'));
-      } } }
-window.onload = init;
+
+  new Shubox('#shubox--textarea--append', {
+    key: "2c0f0440-ddc4-44a8-a1ae-808b7b91001b",
+    clickable: null,
+    successTemplate: ' See? Told you. Right after --> \n\n{{s3url}}',
+    textBehavior: 'append',
+    // copied from website
+    transformName: "Init transform",
+    transformCallbacks: {
+      ".webp": function(shuboxFile) {
+        console.log(shuboxFile.transforms[".webp"].s3url);
+      },
+      ".jp2": function(shuboxFile) {
+        console.log(shuboxFile.transforms[".jp2"].s3url);
+      },
+      "250": function(shuboxFile) {
+        console.log(shuboxFile.transforms["250"].s3url);
+      },
+      "500": function(shuboxFile) {
+        console.log(shuboxFile.transforms["500"].s3url);
+      },
+      "650": function(shuboxFile) {
+        console.log(shuboxFile.transforms["650"].s3url);
+      },
+      "1000": function(shuboxFile) {
+        console.log(shuboxFile.transforms["1000"].s3url);
+      }
+    }
+  })
+
 </script>
