--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,8 +10,6 @@ excerpt_separator: <!-- more -->
       <div class="row center">
         <div class="col s12 l3">
           <span class='center-align'>
-            <!-- <img alt='case linguist logo' src='assets/images/logo.webp' width='350'> -->
-
             <picture>
               {% assign logo_pic = "llc-logo.png" %}
               <source
@@ -19,22 +17,27 @@ excerpt_separator: <!-- more -->
                 srcset="assets/images/1000_{{ logo_pic }}.webp 1024w,
                   assets/images/500_{{ logo_pic }}.webp 640w,
                   assets/images/250_{{ logo_pic }}.webp 320w"
-                type="image/webp" />
+                type="image/webp"
+                sizes="(min-width: 36em) 33.3vw,
+      100vw"/>
               <source
                 media="(min-width: 767px)"
                 srcset="assets/images/1000_{{ logo_pic }}.jpeg 1024w,
                   assets/images/500_{{ logo_pic }}.jpeg 640w,
                   assets/images/250_{{ logo_pic }}.jpeg 320w"
-                type="image/jpeg" />
+                type="image/jpeg"
+                sizes="(min-width: 36em) 33.3vw,
+      100vw"/>
               <img
                 srcset="assets/images/1000_{{ logo_pic }} 1024w,
                   assets/images/500_{{ logo_pic }} 640w,
                   assets/images/250_{{ logo_pic }} 320w"
 
                 src="assets/images/250_{{ logo_pic }}"
-                alt="rene m paccha chicago willis tower background"
                 alt='case linguist llc logo'
-                width='350'/>
+                width='350'
+                sizes="(min-width: 36em) 33.3vw,
+      100vw"/>
 
             </picture>
 
@@ -163,17 +166,23 @@ excerpt_separator: <!-- more -->
           srcset="assets/images/1000_linguist-rene-m-paccha-chicago.jpg.webp 1024w,
             assets/images/500_linguist-rene-m-paccha-chicago.jpg.webp 640w,
             assets/images/250_linguist-rene-m-paccha-chicago.jpg.webp 320w"
-          type="image/webp" />
+          type="image/webp"
+          sizes="(min-width: 36em) 33.3vw,
+      100vw" />
         <source
           media="(min-width: 767px)"
           srcset="assets/images/1000_linguist-rene-m-paccha-chicago.jpg.jpeg 1024w,
             assets/images/500_linguist-rene-m-paccha-chicago.jpg.jpeg 640w,
             assets/images/250_linguist-rene-m-paccha-chicago.jpg.jpeg 320w"
-          type="image/jpeg" />
+          type="image/jpeg"
+          sizes="(min-width: 36em) 33.3vw,
+      100vw"/>
         <img
           srcset="assets/images/1000_linguist-rene-m-paccha-chicago.jpg 1024w,
             assets/images/500_linguist-rene-m-paccha-chicago.jpg 640w,
             assets/images/250_linguist-rene-m-paccha-chicago.jpg 320w"
+            sizes="(min-width: 36em) 33.3vw,
+      100vw"
 
           src="assets/images/250_linguist-rene-m-paccha-chicago.jpg"
           alt="rene m paccha chicago willis tower background"
