--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -186,7 +186,7 @@ excerpt_separator: <!-- more -->
 
           src="assets/images/250_linguist-rene-m-paccha-chicago.jpg"
           alt="rene m paccha chicago willis tower background"
-          class='needs-to-be-own-thing materialboxed center-align responsive-img'/>
+          class='needs-to-be-own-thing materialboxed center-align responsive-img z-depth-3'/>
       </picture>
     </div>
   </div>
