--- a/_includes/pricecards/moz-abogado.html
+++ b/_includes/pricecards/moz-abogado.html
@@ -2,8 +2,11 @@
     <div class="col s12 m8 l6">
         <div class="card">
             <div class="image-responsive center">
-                <img height="285" width="285" alt="6.5k-9.3k Monthly Volume visualization" src="/assets/moz keyword analyze abogado volume.png"/>
-                <br/>
+
+              <picture>
+                {% include normalized.html image_source="moz-abogado-volume.png" alt="6.5k-9.3k moz volume visualization" %}
+              </picture>
+              <br/>
 
             </div>
             <div class="card-stacked">            </div>
