--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,7 +33,14 @@
   {% include google-analytics.html %}
   {% endif %}
 
+  {% if jekyll.environment == 'production' and site.chatra %}
+    {% include chatra.html %}
+  {% endif %}
+
   <!-- Chatra {literal} -->
+
+
+
   <script>
       (function(d, w, c) {
           w.ChatraID = 'RftcZGhX9LZETxsKY';
@@ -54,7 +61,7 @@
   {% if jekyll.environment != 'production' %}
     <script src="https://unpkg.com/shubox@0.2.1/dist/shubox.umd.js"></script>
   {% endif %}
-  
+
 
   <!-- Business Schema (Head) -->
   {% include json-ld/business.html %}
