making better includes

--- a/_includes/figure.html
+++ b/_includes/figure.html
@@ -4,7 +4,7 @@
 <div class="row">
   <div class='col s12 m9 l6'>
     <picture>
-      {% include normalized.html image_source alt %}
+      {% include normalized.html image_source=image_source alt=alt %}
     </picture>
   </div>
 </div>
